--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,6 @@ serde_json = "1.0"
 reqwest = { version = "0.12.5", features = ["blocking", "json"] }
 thiserror = "1.0.62"
 crossbeam = "0.8"
-derive_more = "0.99.18"
 async-trait = "0.1.81"
 num-traits = "0.2.19"
 num-bigint = "0.4"
@@ -23,3 +22,4 @@ byteorder = "1.5.0"
 env_logger = "0.11.5"
 log = "0.4.22"
 regex = "1.10.5"
+getopts = "0.2"
